--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "description": "",
-    "type": "module",
-    "main": "index.js",
+    "description": "Simple CRUD application on Express + TypeScript",
+    "main": "dist/app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon index"
+        "build": "tsc",
+        "start": "node dist/app.js",
+        "dev": "nodemon src/app.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "cors": "^2.8.5",
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.10.5",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mysql2": "^3.6.5",
-        "sequelize": "^6.35.2"
+        "sequelize": "^6.35.2",
+        "typescript": "^5.3.3"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.2"
     }
 }
